syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

service ApiService {
  // Create a user for the fake ID provider.
  rpc FakeIdpCreateUser(FakeIdpCreateUserRequest) returns (FakeIdpCreateUserResponse);

  // Get an ID token from the ID provider.
  rpc FakeIdpGetIdToken(FakeIdpGetIdTokenRequest) returns (FakeIdpGetIdTokenResponse);

  // Create a user by the given `user_id`.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // As we know the user ID, we can check a client ID is assigned in the browser.
  // If none exists, create a client and use the clietn ID to popurate necessary DBs.
  rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);

  // Retrieve un-synched patches from the remote.
  rpc GetPendingPatches(GetPendingPatchesRequest) returns (GetPendingPatchesResponse);

  // Delete remote patches that have been downloaded locally.
  rpc DeletePendingPatches(DeletePendingPatchesRequest) returns (DeletePendingPatchesResponse);

  // Push un-synched patches to the remote.
  rpc CreatePatches(CreatePatchesRequest) returns (CreatePatchesResponse);

  // Get the main branch.
  rpc GetHead(GetHeadRequest) returns (GetHeadResponse);

  // Update the main branch if not modified.
  rpc UpdateHeadIfNotModified(UpdateHeadIfNotModifiedRequest) returns (UpdateHeadIfNotModifiedResponse);

  // Update the main branch.
  rpc UpdateHead(UpdateHeadRequest) returns (UpdateHeadResponse);
}

message Token {
  optional string user_id = 1;
}

message Patch {
  optional int64 client_id = 1;
  optional int64 session_id = 2;
  optional int64 patch_id = 3;
  optional int64 parent_client_id = 4;
  optional int64 parent_session_id = 5;
  optional int64 parent_patch_id = 6;
  optional google.protobuf.Timestamp created_at = 7;
  optional string patch = 8;
}

message FakeIdpCreateUserRequest {
  optional string name = 1;
}

message FakeIdpCreateUserResponse {
  optional Token token = 1;
}

message FakeIdpGetIdTokenRequest {
  optional string name = 1;
}

message FakeIdpGetIdTokenResponse {
  optional Token token = 1;
}

message CreateUserRequest {
  // `user_id` will be provided by an ID provider.
  optional string user_id = 1;
}
message CreateUserResponse {}

message CreateClientRequest {
  optional string name = 1;
}
message CreateClientResponse {
  optional int64 client_id = 1;
}

message GetPendingPatchesRequest {
  optional int64 client_id = 1;
  optional int64 size = 2;
}
message GetPendingPatchesResponse {
  repeated Patch patches = 1;
}

message DeletePendingPatchesRequest {
  message Patch {
    optional int64 client_id = 1;
    optional int64 session_id = 3;
    optional int64 patch_id = 4;
  }
  optional int64 client_id = 1;
  repeated Patch patches = 2;
}
message DeletePendingPatchesResponse {}

message CreatePatchesRequest {
  repeated Patch patches = 2;
}
message CreatePatchesResponse {}

message GetHeadRequest {
  optional int64 client_id = 1;
}
message GetHeadResponse {
  optional int64 client_id = 1;
  optional int64 session_id = 2;
  optional int64 patch_id = 3;
  optional google.protobuf.Timestamp created_at = 4;
  optional string name = 5;
}

message UpdateHeadIfNotModifiedRequest {
  optional int64 client_id = 1;
  optional int64 session_id = 2;
  optional int64 patch_id = 3;
  optional int64 prev_client_id = 4;
  optional int64 prev_session_id = 5;
  optional int64 prev_patch_id = 6;
}

message UpdateHeadIfNotModifiedResponse {
  optional bool updated = 1;
}

message UpdateHeadRequest {
  optional int64 client_id = 1;
  optional int64 session_id = 2;
  optional int64 patch_id = 3;
}

message UpdateHeadResponse {}
